--- a/.github/workflows/genpackage.yml
+++ b/.github/workflows/genpackage.yml
@@ -19,7 +19,9 @@ jobs:
     #- uses: tobozo/Arduino@deauther
     - name: Run a multi-line script
       run: |
-        wget https://raw.githubusercontent.com/tobozo/Arduino/deauther/.github/scripts/genpackage.php --output-document=genpackage.php
+        wget https://raw.githubusercontent.com/tobozo/Arduino/deauther/.github/scripts/genpackage.php
+        wget https://raw.githubusercontent.com/tobozo/Arduino/deauther/.github/scripts/package_deauther_index.ARM.tpl.json
+        wget https://raw.githubusercontent.com/tobozo/Arduino/deauther/.github/scripts/package_deauther_index.tpl.json
         php genpackage.php 
         ls
         ls arm
