--- a/.github/workflows/genpackage.yml
+++ b/.github/workflows/genpackage.yml
@@ -1,4 +1,4 @@
-name: CI
+name: JSON Packages Generator
 
 on:
   push:
@@ -12,18 +12,11 @@ jobs:
     runs-on: ubuntu-latest
     
     steps:
-    #- uses: actions/bin/curl@master
-    #- name: Retrieve the zip from the archive using curl
-    #  run: "https://github.com/tobozo/Arduino/archive/deauther.zip --output deauther.zip"
-    #- uses: actions/bin/sha256sum@master
-    #- uses: tobozo/Arduino@deauther
-    - uses: actions/checkout@deauther
-    - name: Run a multi-line script
+    - name: Generate the json files
       run: |
-        cd .github/scripts
-        # wget https://raw.githubusercontent.com/tobozo/Arduino/deauther/.github/scripts/genpackage.php
-        # wget https://raw.githubusercontent.com/tobozo/Arduino/deauther/.github/scripts/package_deauther_index.ARM.tpl.json
-        # wget https://raw.githubusercontent.com/tobozo/Arduino/deauther/.github/scripts/package_deauther_index.tpl.json
+        wget https://raw.githubusercontent.com/tobozo/Arduino/deauther/.github/scripts/genpackage.php
+        wget https://raw.githubusercontent.com/tobozo/Arduino/deauther/.github/scripts/package_deauther_index.ARM.tpl.json
+        wget https://raw.githubusercontent.com/tobozo/Arduino/deauther/.github/scripts/package_deauther_index.tpl.json
         php genpackage.php 
         echo "Generated package_deauther_index.json :"
         cat package_deauther_index.json
