--- a/.github/workflows/genpackage.yml
+++ b/.github/workflows/genpackage.yml
@@ -12,12 +12,15 @@ jobs:
     runs-on: ubuntu-latest
     
     steps:
-    - name: Generate the json files
+    - name: Retrieve the packager tool
       run: |
         wget https://raw.githubusercontent.com/tobozo/Arduino/deauther/.github/scripts/genpackage.php
         wget https://raw.githubusercontent.com/tobozo/Arduino/deauther/.github/scripts/package_deauther_index.ARM.tpl.json
         wget https://raw.githubusercontent.com/tobozo/Arduino/deauther/.github/scripts/package_deauther_index.tpl.json
-        php genpackage.php 
+    - name: Use the tool to generate the json files
+      run: |
+        php genpackage.php
+    - name: Print generated content
         echo "Generated package_deauther_index.json :"
         cat package_deauther_index.json
         echo "Generated ARM package_deauther_index.json :"
