--- a/.github/workflows/genpackage.yml
+++ b/.github/workflows/genpackage.yml
@@ -21,6 +21,7 @@ jobs:
       run: |
         php genpackage.php
     - name: Print generated content
+      run: |
         echo "Generated package_deauther_index.json :"
         cat package_deauther_index.json
         echo "Generated ARM package_deauther_index.json :"
