--- a/.github/workflows/genpackage.yml
+++ b/.github/workflows/genpackage.yml
@@ -12,16 +12,16 @@ jobs:
     runs-on: ubuntu-latest
     
     steps:
-    - name: Retrieve the packager tool
+    - name: Packager
       run: |
         wget https://raw.githubusercontent.com/tobozo/Arduino/deauther/.github/scripts/genpackage.php
         wget https://raw.githubusercontent.com/tobozo/Arduino/deauther/.github/scripts/package_deauther_index.ARM.tpl.json
         wget https://raw.githubusercontent.com/tobozo/Arduino/deauther/.github/scripts/package_deauther_index.tpl.json
-    - name: Use the tool to generate the json files
-      run: |
+    #- name: Use the tool to generate the json files
+    #  run: |
         php genpackage.php
-    - name: Print generated content
-      run: |
+    #- name: Print generated content
+    #  run: |
         echo "Generated package_deauther_index.json :"
         cat package_deauther_index.json
         echo "Generated ARM package_deauther_index.json :"
