--- a/.github/workflows/genpackage.yml
+++ b/.github/workflows/genpackage.yml
@@ -27,6 +27,8 @@ jobs:
         cp arm/package_deauther_index.json Arduino.wiki/
         cd Arduino.wiki/
         git remote rm origin
+        git config --global user.email "tobozo@users.noreply.github.com"
+        git config --global user.name "tobozo"
         git remote add origin https://tobozo:${{ secrets.TOKEN }}@github.com/tobozo/Arduino.wiki.git
         git add .
         git status
