--- a/.github/workflows/genpackage.yml
+++ b/.github/workflows/genpackage.yml
@@ -11,7 +11,7 @@ jobs:
     runs-on: ubuntu-latest
     
     steps:
-    - name: Packager
+    - name: Deauther Packager
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       run: |
