--- a/.github/workflows/genpackage.yml
+++ b/.github/workflows/genpackage.yml
@@ -1,5 +1,15 @@
 name: JSON Packages Generator
 
+on: 
+  workflow_dispatch:
+    inputs:
+      logLevel:
+        description: 'Log level'     
+        required: true
+        default: 'warning'
+      tags:
+        description: 'Regenerate package'
+
 on:
   push:
     branches:
